# bowline

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  bowline.example.yaml  deny.toml  docker-compose.production.yml  docker-compose.yml  tco.example.yaml
crates/bowline/: Cargo.toml  build.rs
crates/bowline-core/: Cargo.toml
crates/bowline-core/src/: approval.rs  attribution.rs  billing.rs  billing_run.rs  config.rs  decision.rs  economics.rs  enforcement.rs  envelope.rs  export.rs  identifier.rs  ledger.rs  lib.rs  policy.rs  quality.rs  quality_report.rs  quality_run.rs  report.rs  run.rs  supply.rs  traffic.rs
crates/bowline-core/tests/: approval.rs  authority_evidence.rs  controlled_enforcement_report.rs  economics_evidence.rs  enforced_modeled_delta.rs  enforcement.rs  enforcement_selection.rs  envelope.rs  export.rs  state_backend_config.rs
crates/bowline-core/tests/fixtures/: decision-record-v1.json
crates/bowline-core/tests/fixtures/approval/bad-signature/: envelope.json  payload.json
crates/bowline-core/tests/fixtures/approval/expired/: envelope.json  (+2 more)
crates/bowline-core/tests/fixtures/quality/: dataset.yaml  evaluators.yaml  support-cases.jsonl
crates/bowline-gateway/: Cargo.toml
crates/bowline-gateway/examples/: echo_upstream.rs
crates/bowline-gateway/src/: accounting.rs  actuator.rs  billing.rs  canary.rs  contract.rs  enforcement_loader.rs  health.rs  identity.rs  judge.rs  lib.rs  observation.rs  passive.rs  profile.rs  protocol.rs  provenance_digest.rs  proxy.rs  proxy_controlled_matrix_tests.rs  quality_writer.rs  serving_lease.rs  state_backend.rs  supervisor.rs  writer.rs
crates/bowline-gateway/src/serving_lease/: file.rs
crates/bowline-gateway/tests/: actuator.rs  authority_observation.rs  authority_writer.rs  enforcement_kill.rs  enforcement_loader.rs  lease_failover.rs  load.rs  passthrough.rs  serving_lease.rs  state_backend.rs  supervisor.rs
crates/bowline-gateway/tests/fixtures/billing/: canonical.jsonl  generic.csv  mapping.yaml
crates/bowline-gateway/tests/fixtures/passive/: canonical-v1.jsonl
crates/bowline/src/: cmd_billing.rs  cmd_canary.rs  cmd_conformance.rs  cmd_economics.rs  cmd_export.rs  cmd_health.rs  cmd_import.rs  cmd_kill.rs  cmd_policy.rs  cmd_preflight.rs  cmd_promotion.rs  cmd_registry.rs  cmd_report.rs  cmd_serve.rs  economics_render.rs  main.rs  safe_path.rs
crates/bowline/tests/: cli.rs  conformance.rs  kill_cli.rs  process.rs
crates/bowline/tests/fixtures/conformance/: canonical-valid.jsonl  collector-duplicate.jsonl  collector-invalid-utf8.jsonl  collector-malformed.jsonl  collector-oversized-line.jsonl  collector-profile.yaml  collector-schema-invalid.jsonl  collector-valid.jsonl  duplicate-id-canonical.jsonl  forbidden-pointer-profile.yaml  invalid-utf8-canonical.jsonl  invalid-utf8-profile.yaml  malformed-json-canonical.jsonl  malformed-profile.yaml  missing-required-target-profile.yaml  oversized-line-canonical.jsonl  schema-invalid-canonical.jsonl
crates/bowline/tests/fixtures/evidence-v1/: bowline.yaml  policy.yaml  registry.json  tco.yaml
(+83 files in other folders)
