[workspace]
members = [
    "crates/bowline-core",
    "crates/bowline-gateway",
    "crates/bowline",
]
resolver = "2"

[workspace.package]
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.95"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
libc = "0.2"
crc32fast = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
anyhow = "1"
bytes = "1"
futures-util = "0.3"
proptest = "1"
tempfile = "3"
url = "2"
ipnet = { version = "2", features = ["serde"] }
jsonschema = { version = "=0.18.3", default-features = false, features = ["draft202012"] }
regex = "1"
unicode-normalization = "0.1"
csv = "=1.3.1"
minisign-verify = "0.2.5"

[profile.release]
lto = true
strip = true
codegen-units = 1
